src/main/java/dev/meanmail/psi/parser/NginxParser.java
// This is a generated file. Not intended for manual editing.
package dev.meanmail.psi.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static dev.meanmail.psi.Types.*;
import static dev.meanmail.psi.parser.NginxParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class NginxParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return nginxFile(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // LBRACE statement* RBRACE
  public static boolean block_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_stmt")) return false;
    if (!nextTokenIs(builder_, LBRACE)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BLOCK_STMT, null);
    result_ = consumeToken(builder_, LBRACE);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, block_stmt_1(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, RBRACE) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // statement*
  private static boolean block_stmt_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_stmt_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!statement(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "block_stmt_1", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER !EQUAL | VALUE | variable_stmt | string_stmt
  static boolean concat_atom(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "concat_atom")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = concat_atom_0(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, VALUE);
    if (!result_) result_ = variable_stmt(builder_, level_ + 1);
    if (!result_) result_ = string_stmt(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // IDENTIFIER !EQUAL
  private static boolean concat_atom_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "concat_atom_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    result_ = result_ && concat_atom_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // !EQUAL
  private static boolean concat_atom_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "concat_atom_0_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !consumeToken(builder_, EQUAL);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // concat_atom (CONCAT_JOIN concat_atom)+
  public static boolean concatenated_expr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "concatenated_expr")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CONCATENATED_EXPR, "<concatenated expr>");
    result_ = concat_atom(builder_, level_ + 1);
    result_ = result_ && concatenated_expr_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (CONCAT_JOIN concat_atom)+
  private static boolean concatenated_expr_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "concatenated_expr_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = concatenated_expr_1_0(builder_, level_ + 1);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!concatenated_expr_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "concatenated_expr_1", pos_)) break;
    }
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // CONCAT_JOIN concat_atom
  private static boolean concatenated_expr_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "concatenated_expr_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, CONCAT_JOIN);
    result_ = result_ && concat_atom(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // string_stmt | variable_stmt | VALUE | IDENTIFIER | concatenated_expr
  public static boolean condition_expr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "condition_expr")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CONDITION_EXPR, "<condition expr>");
    result_ = string_stmt(builder_, level_ + 1);
    if (!result_) result_ = variable_stmt(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, VALUE);
    if (!result_) result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = concatenated_expr(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // UNARY_OPERATOR condition_expr
  //                  | condition_expr (EQUAL condition_expr | BINARY_OPERATOR regex_expr)?
  public static boolean condition_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "condition_stmt")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CONDITION_STMT, "<condition stmt>");
    result_ = condition_stmt_0(builder_, level_ + 1);
    if (!result_) result_ = condition_stmt_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // UNARY_OPERATOR condition_expr
  private static boolean condition_stmt_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "condition_stmt_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, UNARY_OPERATOR);
    result_ = result_ && condition_expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // condition_expr (EQUAL condition_expr | BINARY_OPERATOR regex_expr)?
  private static boolean condition_stmt_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "condition_stmt_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = condition_expr(builder_, level_ + 1);
    result_ = result_ && condition_stmt_1_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (EQUAL condition_expr | BINARY_OPERATOR regex_expr)?
  private static boolean condition_stmt_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "condition_stmt_1_1")) return false;
    condition_stmt_1_1_0(builder_, level_ + 1);
    return true;
  }

  // EQUAL condition_expr | BINARY_OPERATOR regex_expr
  private static boolean condition_stmt_1_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "condition_stmt_1_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = condition_stmt_1_1_0_0(builder_, level_ + 1);
    if (!result_) result_ = condition_stmt_1_1_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // EQUAL condition_expr
  private static boolean condition_stmt_1_1_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "condition_stmt_1_1_0_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, EQUAL);
    result_ = result_ && condition_expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // BINARY_OPERATOR regex_expr
  private static boolean condition_stmt_1_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "condition_stmt_1_1_0_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, BINARY_OPERATOR);
    result_ = result_ && regex_expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // regular_directive_stmt
  //                     | map_directive_stmt
  //                     | num_map_directive_stmt
  //                     | geo_directive_stmt
  //                     | types_directive_stmt
  //                     | lua_directive_stmt
  //                     | if_directive_stmt
  //                     | location_directive_stmt
  //                     | var_stmt
  public static boolean directive_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "directive_stmt")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, DIRECTIVE_STMT, "<directive stmt>");
    result_ = regular_directive_stmt(builder_, level_ + 1);
    if (!result_) result_ = map_directive_stmt(builder_, level_ + 1);
    if (!result_) result_ = num_map_directive_stmt(builder_, level_ + 1);
    if (!result_) result_ = geo_directive_stmt(builder_, level_ + 1);
    if (!result_) result_ = types_directive_stmt(builder_, level_ + 1);
    if (!result_) result_ = lua_directive_stmt(builder_, level_ + 1);
    if (!result_) result_ = if_directive_stmt(builder_, level_ + 1);
    if (!result_) result_ = location_directive_stmt(builder_, level_ + 1);
    if (!result_) result_ = var_stmt(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // (STRING | variable_stmt)*
  static boolean dq_string_content(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dq_string_content")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!dq_string_content_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "dq_string_content", pos_)) break;
    }
    return true;
  }

  // STRING | variable_stmt
  private static boolean dq_string_content_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dq_string_content_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, STRING);
    if (!result_) result_ = variable_stmt(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // geo_delete_stmt |
  //     geo_default_stmt |
  //     geo_proxy_stmt |
  //     geo_ranges_stmt |
  //     geo_include_stmt |
  //     geo_value_stmt
  public static boolean geo_block_content(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_block_content")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, GEO_BLOCK_CONTENT, "<geo block content>");
    result_ = geo_delete_stmt(builder_, level_ + 1);
    if (!result_) result_ = geo_default_stmt(builder_, level_ + 1);
    if (!result_) result_ = geo_proxy_stmt(builder_, level_ + 1);
    if (!result_) result_ = geo_ranges_stmt(builder_, level_ + 1);
    if (!result_) result_ = geo_include_stmt(builder_, level_ + 1);
    if (!result_) result_ = geo_value_stmt(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // LBRACE geo_block_content* RBRACE
  public static boolean geo_block_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_block_stmt")) return false;
    if (!nextTokenIs(builder_, LBRACE)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, GEO_BLOCK_STMT, null);
    result_ = consumeToken(builder_, LBRACE);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, geo_block_stmt_1(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, RBRACE) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // geo_block_content*
  private static boolean geo_block_stmt_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_block_stmt_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!geo_block_content(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "geo_block_stmt_1", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // GEO_DEFAULT value_stmt SEMICOLON
  public static boolean geo_default_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_default_stmt")) return false;
    if (!nextTokenIs(builder_, GEO_DEFAULT)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, GEO_DEFAULT_STMT, null);
    result_ = consumeToken(builder_, GEO_DEFAULT);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, value_stmt(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, SEMICOLON) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // GEO_DELETE value_stmt SEMICOLON
  public static boolean geo_delete_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_delete_stmt")) return false;
    if (!nextTokenIs(builder_, GEO_DELETE)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, GEO_DELETE_STMT, null);
    result_ = consumeToken(builder_, GEO_DELETE);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, value_stmt(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, SEMICOLON) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // geo_stmt variable_stmt [variable_stmt] geo_block_stmt
  public static boolean geo_directive_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_directive_stmt")) return false;
    if (!nextTokenIs(builder_, GEO)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, GEO_DIRECTIVE_STMT, null);
    result_ = geo_stmt(builder_, level_ + 1);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, variable_stmt(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, geo_directive_stmt_2(builder_, level_ + 1)) && result_;
    result_ = pinned_ && geo_block_stmt(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // [variable_stmt]
  private static boolean geo_directive_stmt_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_directive_stmt_2")) return false;
    variable_stmt(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // GEO_INCLUDE value_stmt SEMICOLON
  public static boolean geo_include_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_include_stmt")) return false;
    if (!nextTokenIs(builder_, GEO_INCLUDE)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, GEO_INCLUDE_STMT, null);
    result_ = consumeToken(builder_, GEO_INCLUDE);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, value_stmt(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, SEMICOLON) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // GEO_DELETE | GEO_DEFAULT | GEO_INCLUDE | GEO_PROXY | GEO_RANGES
  static boolean geo_keyword_as_value(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_keyword_as_value")) return false;
    boolean result_;
    result_ = consumeToken(builder_, GEO_DELETE);
    if (!result_) result_ = consumeToken(builder_, GEO_DEFAULT);
    if (!result_) result_ = consumeToken(builder_, GEO_INCLUDE);
    if (!result_) result_ = consumeToken(builder_, GEO_PROXY);
    if (!result_) result_ = consumeToken(builder_, GEO_RANGES);
    return result_;
  }

  /* ********************************************************** */
  // GEO_PROXY value_stmt SEMICOLON
  public static boolean geo_proxy_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_proxy_stmt")) return false;
    if (!nextTokenIs(builder_, GEO_PROXY)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, GEO_PROXY_STMT, null);
    result_ = consumeToken(builder_, GEO_PROXY);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, value_stmt(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, SEMICOLON) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // GEO_RANGES SEMICOLON
  public static boolean geo_ranges_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_ranges_stmt")) return false;
    if (!nextTokenIs(builder_, GEO_RANGES)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, GEO_RANGES_STMT, null);
    result_ = consumeTokens(builder_, 1, GEO_RANGES, SEMICOLON);
    pinned_ = result_; // pin = 1
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // GEO
  public static boolean geo_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_stmt")) return false;
    if (!nextTokenIs(builder_, GEO)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, GEO);
    exit_section_(builder_, marker_, GEO_STMT, result_);
    return result_;
  }

  /* ********************************************************** */
  // value_stmt (value_stmt | geo_keyword_as_value) SEMICOLON
  public static boolean geo_value_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_value_stmt")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, GEO_VALUE_STMT, "<geo value stmt>");
    result_ = value_stmt(builder_, level_ + 1);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, geo_value_stmt_1(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, SEMICOLON) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // value_stmt | geo_keyword_as_value
  private static boolean geo_value_stmt_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "geo_value_stmt_1")) return false;
    boolean result_;
    result_ = value_stmt(builder_, level_ + 1);
    if (!result_) result_ = geo_keyword_as_value(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // if_stmt if_paren_stmt block_stmt
  public static boolean if_directive_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "if_directive_stmt")) return false;
    if (!nextTokenIs(builder_, IF)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, IF_DIRECTIVE_STMT, null);
    result_ = if_stmt(builder_, level_ + 1);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, if_paren_stmt(builder_, level_ + 1));
    result_ = pinned_ && block_stmt(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // LPAREN condition_stmt (RPAREN | &LBRACE)
  public static boolean if_paren_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "if_paren_stmt")) return false;
    if (!nextTokenIs(builder_, LPAREN)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, IF_PAREN_STMT, null);
    result_ = consumeToken(builder_, LPAREN);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, condition_stmt(builder_, level_ + 1));
    result_ = pinned_ && if_paren_stmt_2(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // RPAREN | &LBRACE
  private static boolean if_paren_stmt_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "if_paren_stmt_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, RPAREN);
    if (!result_) result_ = if_paren_stmt_2_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // &LBRACE
  private static boolean if_paren_stmt_2_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "if_paren_stmt_2_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _AND_);
    result_ = consumeToken(builder_, LBRACE);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }
